--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Institution Logo" class="logo">
+    <img src="images.png" alt="" secset="">
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
@@ -24,13 +24,12 @@
       </ul>
     </nav>
 
-    <!-- Institution Info -->
     <div class="header-info">
       
       <div>
-        <h1>My Institution Name</h1>
-        <p>Affiliated to XYZ University</p>
-        <p>123 College Road, City, State</p>
+        <h1>NMAMIT</h1>
+        <p>Affiliated to NITTE University</p>
+        <p>Nitte College ,Karkala Taluk, Udupi, Karnataka</p>
       </div>
     </div>
   </header>
@@ -45,7 +44,8 @@
       <a href="#">Facebook</a> | |
       <a href="#">Instagram</a>
     </p>
-    <p>&copy; 2025 My Institution</p>
+    <p> My Institution</p>
   </footer>
 </body>
+
 </html>
