--- a/cs.html
+++ b/cs.html
@@ -26,18 +26,18 @@
 
   <main>
     <h1>Computer Science Department</h1>
-    <p>The Computer Science Department offers cutting-edge programs in AI, Data Science, Software Engineering, and more.</p>
+    <p>The Computer Science Department programs in AI, Data Science,  and more.</p>
     <h2>Courses Offered</h2>
     <ul>
       <li>Artificial Intelligence</li>
-      <li>Data Structures & Algorithms</li>
+      <li>Data Science</li>
       <li>Web Development</li>
-      <li>Database Management Systems</li>
     </ul>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Institution</p>
+    <p>&copy; My Institution</p>
   </footer>
 </body>
+
 </html>
