--- a/is.html
+++ b/is.html
@@ -26,18 +26,18 @@
 
   <main>
     <h1>Information Science Department</h1>
-    <p>The Information Science Department focuses on information systems, cybersecurity, and data analytics.</p>
+    <p>The Information Science Department offers programs such as information systems, data analytics.,etc..</p>
     <h2>Courses Offered</h2>
     <ul>
       <li>Cybersecurity Fundamentals</li>
-      <li>Data Analytics</li>
-      <li>Information Retrieval</li>
-      <li>Cloud Computing</li>
+      <li>Data Management</li>
+      <li>Information Systems</li>
     </ul>
   </main>
 
   <footer>
-    <p>&copy; 2025 My Institution</p>
+    <p>&copy; My Institution</p>
   </footer>
 </body>
+
 </html>
