--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo"> 
-    <img src="logo.png" alt="Institution Logo" >
+    <img src="images.png" alt="Institution Logo" >
     </div>
     <div class="header-content">
         <h1>NMAMIT</h1>
@@ -63,6 +63,7 @@
   </footer>
   <div class="footer-background"></div>
 </body>
+
 
 
 </html>
