--- a/is.html
+++ b/is.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <header>
+    <div class="logo">
+      <img src="images.png"
     <nav>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -40,4 +42,5 @@
     <p>&copy; 2025 My Institution.All rights are reserved.</p>
   </footer>
 </body>
+
 </html>
