--- a/is.html
+++ b/is.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images.png"
+      <img src="images.png" alt="institotion logo">
     <nav>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -44,3 +44,4 @@
 </body>
 
 </html>
+
