--- a/is.html
+++ b/is.html
@@ -10,6 +10,7 @@
   <header>
     <div class="logo">
       <img src="images.png" alt="Institotion Logo">
+    </div>
     <nav>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -44,5 +45,6 @@
 </body>
 
 </html>
+
 
 
