--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class=logo>
-      <img src="images.png" alt="Institution Logo>
+      <img src="images.png" alt="Institution Logo">
     </div>
     <nav>
       <ul class="menu">
@@ -37,3 +37,4 @@
 </body>
 
 </html>
+
