--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <header>
+    <div class=logo>
+      <img src="images.png alt="Institution Logo">
+    </div>
     <nav>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
@@ -32,4 +35,5 @@
     <p>&copy; 2025 My Institution.All rights are reserved.</p>
   </footer>
 </body>
+
 </html>
