--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo"> 
-    <img src="images.png" alt="Institution Logo" >
+    <img src="images.png" alt="Institution Logo" style = "width : 500px; height: 125px;> 
     </div>
     <div class="header-content">
         <h1>NMAMIT</h1>
@@ -67,3 +67,4 @@
 
 
 </html>
+
