--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         2020. NMAMIT, the off-campus centre of Nitte DU located at Nitte in Karkala Taluk, has active collaborations with several international 
         universities and organizations for faculty and student exchanges, research, internships and placements.
   </main>
-  
+  <div class="main-background"></div>
   
   
   
@@ -60,8 +60,6 @@
     </p>
     </div>
     <p>&copy; 2025 My Institution.All rights reserved.</p>
-  </footer>
-  <div class="footer-background"></div>
 </body>
 
 
