--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="social-links">
     <p>Follow us on:
       <a href="#">Facebook</a> | |
-      <a href="#">Instagram</a>
+      <a href="#">Instagram</a> | |
       <a href="#">Twitter</a>
     </p>
     </div>
